@@ -3,14 +3,17 @@
 Imports the Carbon module.
 
 .DESCRIPTION
-Imports the Carbon module.  If the Carbon module is already loaded, it will remove it and then reloaded.
+Intelligently imports the Carbon module, re-importing it if needed. Carbon will be re-imported if:
+
+ * a different version is currently loaded
+ * any of Carbon's files were modified since it was last imported with this script
+ * the `Force` switch is set
+ * or the `CARBON_ENV` environment variable is set to `developer`
 
 .EXAMPLE
 Import-Carbon.ps1
 
 Imports the Carbon module, re-loading it if its already loaded.
-
-Imports the Carbon module, hiding any warnings about Carbon being loaded as a sub-module.
 #>
 
 # Copyright 2012 Aaron Jensen
@@ -32,15 +35,49 @@ param(
     [Parameter()]
     [string]
     # The prefix to use on all the module's functions, cmdlets, etc.
-    $Prefix
+    $Prefix,
+
+    [Switch]
+    # Reload the module no matter what.
+    $Force
 )
 
 #Requires -Version 4
 Set-StrictMode -Version 'Latest'
 
-if( (Get-Module 'Carbon') )
+$carbonPsd1Path = Join-Path -Path $PSScriptRoot -ChildPath 'Carbon.psd1' -Resolve
+
+$startedAt = Get-Date
+$loadedModule = Get-Module 'Carbon'
+if( $loadedModule )
 {
-    Remove-Module 'Carbon' -Verbose:$false -WhatIf:$false
+    if( -not $Force -and ($loadedModule | Get-Member 'ImportedAt') )
+    {
+        $importedAt = $loadedModule.ImportedAt
+        $newFiles = Get-ChildItem -Path $PSScriptRoot |
+                        Where-Object { $_.LastWriteTime -gt $importedAt }
+        if( $newFiles )
+        {
+            Write-Verbose ('Reloading Carbon module. The following files were modified since {0}:{1} * {2}' -f $importedAt,([Environment]::NewLine),($newFiles -join ('{0} * ' -f ([Environment]::NewLine)))) -Verbose
+            $Force = $true
+        }
+    }
+
+    $thisModuleManifest = Test-ModuleManifest -Path $carbonPsd1Path
+    if( $thisModuleManifest )
+    {
+        if( -not $Force -and $thisModuleManifest.Version -ne $loadedModule.Version )
+        {
+            Write-Verbose ('Reloading Carbon module. Module from {0} at version {1} not equal to module from {2} at version {3}.' -f $loadedModule.ModuleBase,$loadedModule.Version,(Split-Path -Parent -Path $thisModuleManifest.Path),$thisModuleManifest.Version) -Verbose
+            $Force = $true
+        }
+    }
+
+    if( -not $Force -and $env:CARBON_ENV -eq 'Developer' )
+    {
+        Write-Verbose ('Reloading Carbon module. CARBON_ENV environment variable set to ''{0}''.' -f $env:CARBON_ENV) -Verbose
+        $Force = $true
+    }
 }
 
 $importModuleParams = @{ }
@@ -49,5 +86,6 @@ if( $Prefix )
     $importModuleParams.Prefix = $Prefix
 }
 
-$carbonPsd1Path = Join-Path -Path $PSScriptRoot -ChildPath 'Carbon.psd1' -Resolve
-Import-Module $carbonPsd1Path -ErrorAction Stop -Verbose:$false @importModuleParams
+Import-Module $carbonPsd1Path -ErrorAction Stop -Force:$Force -Verbose:$false @importModuleParams
+
+Get-Module -Name 'Carbon' | Add-Member -MemberType NoteProperty -Name 'ImportedAt' -Value (Get-Date) -Force
